refactor: привести приложение к нормальному виду между спринтами